--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,7 +17,7 @@
     </style>
   </head>
   <body>
-    <form class="" action="/usuario" method="post" enctype="multipart/form-data">
+    <form class="" action="/upload" method="post" enctype="multipart/form-data">
         <label for="archivo">Selecionar archivo</label>
         <input type="file" name="archivo" >
         <input type="submit" name="submit" value="enviar">
